# pdf_langchain

./: .gitignore  Dockerfile  README.md  alembic.ini  dev.env  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_12_09_1417_3b463f4c3ef9_init.py  2024_12_11_2107_c39683f33e4e_add_chat_and_pdf_models.py
app/core/: app.py  database.py  exception_handlers.py
apps/api/: __init__.py  chat.py  upload_pdf.py
apps/celery/: parser.py  worker.py
apps/core/: __init__.py  app.py  database.py  exception_handlers.py  settings.py
apps/es/: elasticsearch_logger.py
apps/middlewares/: logging.py  rate_limiter.py
apps/minio/: minio_client.py
apps/models/: __init__.py  chat_models.py  file_models.py
apps/schemas/: file.py  llm.py
apps/services/: chat.py  pdf.py
apps/utils/: db.py  exceptions.py  llm.py  nlp.py  pdf_parser.py
core/: app.py  database.py  settings.py
docker/fastapi/: init.sh
docker/postgresql/: init.sql
tests/: __init__.py  test_pdf_upload.py
