[project]
name = "seven-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.14.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "billiard==4.2.1",
    "cachetools==5.5.0",
    "celery==5.4.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "click==8.1.7",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.6",
    "filetype==1.2.0",
    "google-ai-generativelanguage==0.6.10",
    "google-api-core==2.23.0",
    "google-api-python-client==2.154.0",
    "google-auth-httplib2==0.2.0",
    "google-auth==2.36.0",
    "google-generativeai==0.8.3",
    "googleapis-common-protos==1.66.0",
    "grpcio-status==1.68.1",
    "grpcio==1.68.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httpx==0.28.0",
    "idna==3.10",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "kombu==5.4.2",
    "langchain-core==0.3.21",
    "langchain-google-genai==2.0.6",
    "langsmith==0.1.147",
    "mako==1.3.7",
    "markupsafe==3.0.2",
    "orjson==3.10.12",
    "packaging==24.2",
    "prompt-toolkit==3.0.48",
    "proto-plus==1.25.0",
    "protobuf==5.29.1",
    "psycopg2-binary==2.9.9",
    "pyasn1-modules==0.4.1",
    "pyasn1==0.6.1",
    "pydantic-core==2.27.1",
    "pydantic-settings==2.6.1",
    "pydantic==2.10.3",
    "pyparsing==3.2.0",
    "pypdf==5.1.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.19",
    "pyyaml==6.0.2",
    "requests-toolbelt==1.0.0",
    "requests==2.32.3",
    "rsa==4.9",
    "ruff==0.8.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.36",
    "starlette==0.41.3",
    "tenacity==9.0.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.3",
    "uvicorn==0.32.1",
    "vine==5.1.0",
    "wcwidth==0.2.13",
]
